ember/app/styles/_service_fragments.scss
section.row  {
  h2.c-model-heading {
    margin-bottom: 0;
  }
  h3.c-model-heading {
    text-align: center;
    margin-bottom: 0;
  }
}

.row.c-model-add-button {
  margin: 0;

  button.btn.btn-primary {
    margin-bottom: 1em;
  }
}

